--- a/about_us.html
+++ b/about_us.html
@@ -102,12 +102,12 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
+					<li><a tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
 			</nav> 
 		</div>	
@@ -133,7 +133,7 @@ ga('send', 'pageview'); -->
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
 					<button onclick="accepted()" class="cookieBtn">ACCEPT</button>
-						<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
+						<a rel="noopener" class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
 				</div> 
 			
 		</section>
@@ -238,8 +238,8 @@ ga('send', 'pageview'); -->
 									</div>
 									<div class="cInfoSection social">
 										<h3>SOCIAL</h3>
-											<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-											<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+											<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
 									</div>
 			</div>
 			</main>
@@ -251,8 +251,8 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
-					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
+					<p><a rel="noopener" target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a rel="noopener" target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
@@ -265,11 +265,11 @@ ga('send', 'pageview'); -->
 				</div>
 				<div class="footerTFM">
 						<h3>TFM GROUP</h3>
-						<a target="_blank" href="http://www.tfmnetworks.com/" >Home</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
-						<a target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/contact-us/">Contact</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/" >Home</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
+						<a rel="noopener" target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/contact-us/">Contact</a>
 					</div>
 			</div>
 		</footer>
