--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- <meta name="theme-color" content="#028fcc"/> -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for different-sized companies. AEQUOS provides different levels of services based on..." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
@@ -102,12 +103,12 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
+					<li><a tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
 			</nav> 
 		</div>	
@@ -134,7 +135,7 @@ ga('send', 'pageview'); -->
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
 					<button onclick="accepted()" class="cookieBtn">ACCEPT</button>
-						<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
+						<a rel="noopener" class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
 				</div> 
 			
 		</section>
@@ -307,8 +308,8 @@ ga('send', 'pageview'); -->
 					</div>
 					<div class="cInfoSection social">
 						<h3>SOCIAL</h3>
-							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+							<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
 					</div>
 					
 			</div>
@@ -321,8 +322,8 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
-					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
+					<p><a rel="noopener" target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a rel="noopener" target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
@@ -335,11 +336,11 @@ ga('send', 'pageview'); -->
 				</div>
 				<div class="footerTFM">
 						<h3>TFM GROUP</h3>
-						<a target="_blank" href="http://www.tfmnetworks.com/">Home</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
-						<a target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
-						<a target="_blank" href="http://www.tfmnetworks.com/contact-us/">Contact</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/">Home</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
+						<a rel="noopener" target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
+						<a rel="noopener" target="_blank" href="http://www.tfmnetworks.com/contact-us/">Contact</a>
 					</div>
 			</div>
 		</footer>
