triangles added, prefixed css file created

--- a/about_us.html
+++ b/about_us.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - ABOUT US</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -122,7 +121,7 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="servicesHome_section">
-			<img class="shape shapeServiceHome" src="images/shapeAboutus.gif" alt="blue background abstract shape">
+			<img class="shape shapeServiceHome" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
 			<div class="main_heading aboutMainH">
 				<h2>AEQUOS</h2>
 				<h1>ABOUT US</h1>
@@ -169,6 +168,9 @@ ga('send', 'pageview'); -->
 
 		<section class="SDeasy">
 				<h2>AEQUOS ENSURES THAT	YOUR NETWORKING DECISIONS	ARE INFORMED, SUSTAINABLE AND	TUNED TO BUSINESS OBJECTIVES.</h2>
+				<div aria-hidden="true" class="triangleCont">
+						<div class="whiteTriangle"></div>
+					</div>
 		</section>
 
 		<section id="aboutUsIconsSection">
@@ -191,6 +193,9 @@ ga('send', 'pageview'); -->
 				<img alt="bespoke right-sized business network icon" class="aboutIcons" src="images/bespoke.png">
 				<h3>BESPOKE</h3>			
 				<p>We focus on making sure you deploy the right-sized SD-WAN for your business. </p>
+			</div>
+			<div class="triangleContAboutUs">
+					<div aria-hidden="true" class="greyTriangleLeft"></div>
 			</div>
 		</section>
 
