--- a/contact-us.html
+++ b/contact-us.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - CONTACT US</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -146,6 +145,7 @@ ga('send', 'pageview'); -->
 	
 	<!-- Section features -->
 	<section class="contact-uspage" id="morefeatures">
+			<div aria-hidden="true" class="blackTriangle"></div>
 			<h2>GET IN TOUCH</h2>
 			<div class="section__content">
 				<div class="section__description">
@@ -178,6 +178,7 @@ ga('send', 'pageview'); -->
 					</form>
 					</div>
 				</div>
+				<div aria-hidden="true" class="whiteTriangleContact"></div>
 				</div>
 	</section>
 
@@ -324,12 +325,12 @@ ga('send', 'pageview'); -->
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="#home_section">Home</a>
+					<a href="index.html">Home</a>
 					<a href="services.html">Services</a>
 					<a href="sd-wan.html">SD-WAN</a>
 					<a href="about_us.html">About us</a>
 					<a href="news.html">News</a>
-					<a href="contact-us.html#contactHome_section">Contact</a>
+					<a href="#contactHome_section">Contact</a>
 				</div>
 				<div class="footerTFM">
 						<h3>TFM GROUP</h3>
