--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <meta name="description" content="The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for different-sized companies. AEQUOS provides different levels of services based on..." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="shortcut icon" 
@@ -198,6 +197,7 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="sdWan_section">
+			<div aria-hidden="true" class="whiteTriangle"></div>
 			<div class="upsideShape">
 					<img class="shape upside" src="images/shapeTransBlack.gif" alt="blue background abstract shape">
 			</div>
@@ -220,6 +220,7 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="overview_section">
+			<div aria-hidden="true" class="blackTriangle"></div>
 			<div id="overviewCont">
 				<div class="partner">
 					<h2>WHY PARTNER WITH AEQUOS?</h2>
@@ -260,6 +261,7 @@ ga('send', 'pageview'); -->
 				<a href="about_us.html" class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
 			</div>
 			</div>
+			<div aria-hidden="true" class="greyTriangle"></div>
 		</section>
 
 		<section id="clients_section">
