--- a/services.html
+++ b/services.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - SERVICES</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="shortcut icon" 
@@ -121,7 +120,7 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="servicesHome_section">
-			<img class="shape shapeServiceHome" src="images/Blendshape.gif" alt="blue background abstract shape">
+			<img class="shape shapeServiceHome" src="images/shapeBlue.gif" alt="blue background abstract shape">
 			<div class="main_heading services">
 				<h2>AEQUOS</h2>
 				<h1>OUR SERVICES</h1>
@@ -189,6 +188,7 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="servicesMainDescription">
+			<div aria-hidden="true" class="darkgreyTriangle"></div>
 			<div class="sdHome serviceNetwork">
 				<h2>CHOOSE THE NETWORK THAT FITS YOUR BUSINESS</h2>
 				<div class="sdHomeDescr networkDescr">
@@ -236,6 +236,9 @@ ga('send', 'pageview'); -->
 				</div>
 				<a href="about_us.html" class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
 			</div>
+			</div>
+			<div class="triangleContServices">
+					<div aria-hidden="true" class="greyTriangleLeft"></div>
 			</div>
 		</section>
 
