--- a/news.html
+++ b/news.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - ABOUT US</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/>
@@ -225,6 +224,7 @@ ga('send', 'pageview'); -->
 			<p>View our videos <i class='fas fa-angle-right'></i></p>
 			<p>Making sense starts here</p>
 			<h5>WATCH VIDEO <i class='fas fa-angle-right'></i></h5>
+			<div aria-hidden="true" class="greyTriangle"></div>
 		</section>
 
 		<section id="clients_section">
