--- a/sd-wan.html
+++ b/sd-wan.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - SD-WAN </title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -149,12 +148,18 @@ ga('send', 'pageview'); -->
 		</div>
 			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
+
 		<section id="SDwanMain">
+			<div aria-hidden="true" class="blackTriangleSD"></div>
 			<img class="sdImg" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 			<img class="sdImgLarge" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 		</section>
+
 		<section class="SDeasy">
 			<h2>IMAGINE A NETWORK THAT LEARNS	EXACTLY WHAT YOUR BUSINESS NEEDS, THEN JUST MAKES IT HAPPEN.</h2>
+			<div aria-hidden="true" class="triangleCont">
+				<div class="whiteTriangle"></div>
+			</div>
 		</section>
 
 		<section class="sdWanMainsection">
@@ -178,7 +183,8 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section id="shortCompareTech">
-			<div>
+			<div aria-hidden="true" class="blueTriangle"></div>
+			<div class="techTableCont">
 					<table style="width:90%">
 							<tr>
 								<th></th>
@@ -250,6 +256,7 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section class="sdWanMainsection">
+				<div aria-hidden="true" class="whiteTriangle"></div>
 				<div class="sdHome mainSDDescr">
 					<h2>WHAT IS <strong>MPLS</strong></h2>
 					<div class="sdHomeDescr">
@@ -316,6 +323,7 @@ ga('send', 'pageview'); -->
 				</section>
 
 		<section id="clients_section">
+			<div aria-hidden="true" class="greyTriangle"></div>
 			<div>
 				<h2>A FEW OF THE PARTNERS WE WORK WITH </h2>
 				<div class="clientLogos">
