--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -6,9 +6,8 @@
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - TERMS OF USE</title>
-<!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<script src="prefixfree.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -122,7 +121,7 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="termsSection">
-			<img class="shape termsShape" src="images/shapeAboutus.gif" alt="blue background abstract shape">
+			<img class="shape termsShape" src="images/shapeBlueAbout.gif" alt="blue background abstract shape">
 			<div class="main_heading termsHead">
 				<h2>AEQUOS</h2>
 				<h1>TERMS OF USE</h1>
