meta description changed

--- a/sd-wan.html
+++ b/sd-wan.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="SD-WAN, that is, software-defined wide area networking improves on the existing networking solutions by utilising the cloud and tested networking solutions such as..." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - SD-WAN </title>
 <link rel="stylesheet" href="css/style.css">
