--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
-<meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
+<meta name="description" content="AEQUOS offers three levels of services that revolutionise the bandwidth usage, IT infrastructure, scoping and design enhanced by service monitoring and security implementations" />
+<meta name="keywords" content="AEQUOS, technology, Business, SD-WAN" />
 <title>AEQUOS - SERVICES</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="prefixfree.js"></script>
