--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider that provides clear terms and conditions for using their website." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - TERMS OF USE</title>
 <link rel="stylesheet" href="css/style.css">
