--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="AEQUOS aspires to create meaningful relationships with partners so that the right solution can be found for business needs. Get in touch today for more information." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - CONTACT US</title>
 <link rel="stylesheet" href="css/style.css">
