--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider who aim to distribute the expert knowledge they have including their latest findings and information." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - ABOUT US</title>
 <link rel="stylesheet" href="css/style.css">
