--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
+<meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider. For the better user experience AEQUOS has implemented the use of cookies with a set of rules and policy to ensure that the data collected is fairly used." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - PRIVACY POLICY</title>
 <link rel="stylesheet" href="css/style.css">
