--- a/news.html
+++ b/news.html
@@ -267,7 +267,7 @@ ga('send', 'pageview'); -->
 										<h3>SALES</h3>
 										<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
 										
-										<p class="contactLinkFooter"><a href="contact-us.html" aria-label="navigation to new page with a contact form" >Contact us <i class="fas fa-angle-right"></i></a></p>
+										<p class="contactLinkFooter"><a href="contact-us.html" aria-label="navigation to new page with a contact form" >General Enquiries and Webinars <i class="fas fa-angle-right"></i></a></p>
 									</div>
 									<div class="cInfoSection social">
 										<h3>SOCIAL</h3>
