--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ ga('send', 'pageview'); -->
 						<h3>SALES</h3>
 						<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
 						
-							<p class="contactLinkFooter"><a href="contact-us.html" aria-label="navigation to new page with a contact form" >Contact us <i class="fas fa-angle-right"></i></a></p>
+							<p class="contactLinkFooter"><a href="contact-us.html" aria-label="navigation to new page with a contact form" >General Enquiries and Webinars <i class="fas fa-angle-right"></i></a></p>
 								<!-- <button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us <i class="fas fa-angle-right"></i></a></button> -->
 							
 					</div>
