--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - ABOUT US</title>
 <link rel="stylesheet" href="css/style.css">
-<script src="prefixfree.js"></script>
+<!-- <script src="prefixfree.js"></script> -->
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/>
@@ -140,11 +140,12 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<div class="chat newschat">
-				<img alt="Lets chat bubble above chat icon" class="chattext" src="images/chattext.png">
-				<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
-		</div>
+			<img alt="Lets chat bubble above chat icon" class="chattext" onclick="openChat()" src="images/chattext.png">
+			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
+			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
+	</div>
 		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
-		<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
+		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section class="news">
 			<div class="newsContent">
