service workers done

--- a/about_us.html
+++ b/about_us.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS is a privately owned forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - ABOUT US</title>
@@ -137,7 +139,7 @@ ga('send', 'pageview'); -->
 			
 		</section>
 		<div id="heading_bottom">
-			<p>SEE MORE</p>
+			<p><a href="#aboutUsVideo">SEE MORE</a></p>
 			<a href="#aboutUsVideo"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
@@ -150,7 +152,7 @@ ga('send', 'pageview'); -->
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section id="aboutUsVideo">
-				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/pw-YoWq6SwI' frameborder='0' allowfullscreen></iframe></div>
+				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Optimise quality of IT experience using SD-WAN" src='https://www.youtube.com/embed/pw-YoWq6SwI' frameborder='0' allowfullscreen></iframe></div>
 		</section>
 
 		<section id="aboutMainDescription">
@@ -290,6 +292,7 @@ ga('send', 'pageview'); -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="main.js"></script>
+	<!-- <script src="sw.js"></script> -->
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
