--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS aspires to create meaningful relationships with partners so that the right solution can be found for business needs. Get in touch today for more information." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - CONTACT US</title>
@@ -256,12 +258,13 @@ ga('send', 'pageview'); -->
 								<input class="nameform" id="your_company_website" type="text" name="your_company_website" value="" size="40"  placeholder="Company Website" >
 							</div>
 							<div class="cf-right form oneLine">
-								<label for="your_company">Phone</label>
+								<label for="your_phone_webinar">Phone</label>
 								<input class="phoneform" id="your_phone_webinar" type="text" name="your_phone_webinar" value="" size="40"  placeholder="Phone">
 							</div>
 						</div>
 						
 						<div class="row-full form">
+								<label for="your_demo">Select an option</label>
 							<select class="select_values" id="your_demo" name="your_demo" required >
 								<option disabled selected hidden>Would you like a demo of the AEQUOS SD-WAN platform?</option>
 								<option value="Yes" >Yes</option>
@@ -347,7 +350,7 @@ ga('send', 'pageview'); -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="main.js"></script>
-
+<!-- <script src="sw.js"></script> -->
 <script type="text/javascript" src="jquery.validate.min.js"></script>
 
 <!-- <script src="js/jquery.paroller.min.js"></script>
