--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- <meta name="theme-color" content="#028fcc"/> -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for different-sized companies. AEQUOS provides different levels of services based on..." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
@@ -139,7 +141,7 @@ ga('send', 'pageview'); -->
 			
 		</section>
 		<div id="heading_bottom">
-			<p>SEE MORE</p>
+			<p><a href="#services_section">SEE MORE</a></p>
 			<a href="#services_section"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
@@ -359,6 +361,7 @@ ga('send', 'pageview'); -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="main.js"></script>
+	<!-- <script src="sw.js"></script> -->
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
