--- a/sd-wan.html
+++ b/sd-wan.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
 <meta name="description" content="SD-WAN, that is, software-defined wide area networking improves on the existing networking solutions by utilising the cloud and tested networking solutions such as..." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - SD-WAN </title>
@@ -138,7 +139,7 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<div id="heading_bottom">
-			<p>SEE MORE</p>
+			<p><a href="#SDwanMain">SEE MORE</a></p>
 			<a href="#SDwanMain"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
@@ -414,6 +415,7 @@ ga('send', 'pageview'); -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="main.js"></script>
+	<!-- <script src="sw.js"></script> -->
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
