--- a/services.html
+++ b/services.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS offers three levels of services that revolutionise the bandwidth usage, IT infrastructure, scoping and design enhanced by service monitoring and security implementations" />
 <meta name="keywords" content="AEQUOS, technology, Business, SD-WAN" />
 <title>AEQUOS - SERVICES</title>
@@ -137,7 +139,7 @@ ga('send', 'pageview'); -->
 			
 		</section>
 		<div id="heading_bottom">
-			<p>SEE MORE</p>
+			<p><a href="#servicesMain">SEE MORE</a></p>
 			<a href="#servicesMain"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
@@ -334,6 +336,7 @@ ga('send', 'pageview'); -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="main.js"></script>
+	<!-- <script src="sw.js"></script> -->
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
