--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider. For the better user experience AEQUOS has implemented the use of cookies with a set of rules and policy to ensure that the data collected is fairly used." />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - PRIVACY POLICY</title>
@@ -284,6 +286,7 @@ ga('send', 'pageview'); -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="main.js"></script>
+<!-- <script src="sw.js"></script> -->
 <!-- <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
