latest design changes done

--- a/news.html
+++ b/news.html
@@ -124,7 +124,7 @@ ga('send', 'pageview'); -->
 
 	<main class="flex-container" role="main">
 		<section id="newsHome_section">
-			<img class="shape shapeServiceHome" src="images/peachshape.gif" alt="blue background abstract shape">
+			<img class="shape shapeServiceHome" src="images/peachshape.gif" alt="white background abstract shape">
 			<div class="main_heading newsHead">
 				<h2>AEQUOS</h2>
 				<h1>NEWS</h1>
