--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@ ga('send', 'pageview'); -->
 			<div class="sdHome serviceNetwork">
 				<h2>CHOOSE THE NETWORK THAT FITS YOUR BUSINESS</h2>
 				<div class="sdHomeDescr networkDescr">
-					<p>OUR RANGE OF SD-WAN MANAGED SERVICES DELIVER A MODERN NETWORKING CAPABILITY THAT CONSTANTLY EVOLVES AS TECHNOLOGY ADVANCES AND YOUR BUSINESS GROWS. </h3>
+					<h3 id="chooseNetworkSubHead">OUR RANGE OF SD-WAN MANAGED SERVICES DELIVER A MODERN NETWORKING CAPABILITY THAT CONSTANTLY EVOLVES AS TECHNOLOGY ADVANCES AND YOUR BUSINESS GROWS. </h3>
 					<p>By separating physical WAN circuits (the Underlay network) from WAN topology (the Overlay), our services provide unrivalled levels of support in building and proactively managing a more efficient, highly responsive and business-focused network. </p>
 					<p>In most cases, our wide range of proven carrier, capacity and resilience models transform virtually every location. Whichever level you choose, you can rely on a service that adapts to any topology and seamlessly responds to growth, peak demand and business requirements. All underpinned by a constant focus on business outcomes rather than traditional technical metrics.</p>
 					<p>Behind the technology, the people. Aequos offers the exceptional level of expertise, commitment and energy necessary to drive a truly effective network transformation.</p>
