some design changes and keyword meta removed

--- a/about_us.html
+++ b/about_us.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="black">
-<meta name="description" content="AEQUOS is a privately owned forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
-<meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
+<meta name="description" content="AEQUOS is a privately-owned forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
 <title>AEQUOS - ABOUT US</title>
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -160,9 +159,9 @@ ga('send', 'pageview'); -->
 				<h2>INTRODUCING AEQUOS</h2>
 				<div class="sdHomeDescr networkDescr">
 					<p>Aequos is focused on one single, simple objective: Delivering the right-sized network, right now. From this, all else follows.</h3>
-					<p>We are a dynamic, privately owned and forward-thinking company, working closely with our customers to deliver innovation on a daily basis. </p>
+					<p>We are a dynamic, privately-owned and forward-thinking company, working closely with our customers to deliver innovation on a daily basis. </p>
 					<p>Committed and passionate about what we do, our innovative approach is constantly evolving in line with the ever-changing requirements of the modern business. Our business-first model meets the demands of complex application and end-user requirements, delivering agility, scalability and security. </p>
-					<p>We remain at the forefront of new technologies, deploying the latest advancements  to accelerate the implementation and maximise the value of our networking services.</p>
+					<p>We remain at the forefront of new technologies, deploying the latest advancements to accelerate the implementation and maximise the value of our networking services.</p>
 					<p>As thought-leaders within the SD-WAN technology marketplace, our proven technology and services model enables companies of all sizes and across all sectors to exploit digital transformation.</p>
 					<a class="discoverServices" href="sd-wan.html">MORE ABOUT SD-WAN <i class='fas fa-angle-right'></i></a>
 				</div>
