--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="black">
 <meta name="description" content="The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for different-sized companies. AEQUOS provides different levels of services based on..." />
-<meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -155,7 +154,7 @@ ga('send', 'pageview'); -->
 		<section id="services_section">
 			
 			<div class="subSection">
-					<h2>THE FUTURE OF NETWORKING</h2>
+					<h2>THE FUTURE <br>OF NETWORKING</h2>
 				<p>Whatever the size of your company, whichever sector you work in, Aequos is a proven guide to the new world of cloud-based connectivity. We specialise in deploying next-generation SD-WAN to deliver right-sized networking solutions and bandwidth. We are here to make sure every application in every location fits your business priorities. Supports your objectives. And powers your growth.
 				</p>
 				<p id="model">Our business first model is designed to meet the demands of modern-day application and end-user requirements.</p>
