--- a/sd-wan.html
+++ b/sd-wan.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
 <meta name="description" content="SD-WAN, that is, software-defined wide area networking improves on the existing networking solutions by utilising the cloud and tested networking solutions such as..." />
-<meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
 <title>AEQUOS - SD-WAN </title>
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -260,7 +259,7 @@ ga('send', 'pageview'); -->
 		<section class="sdWanMainsection">
 				<div aria-hidden="true" class="whiteTriangle"></div>
 				<div class="sdHome mainSDDescr">
-					<h2>WHAT IS <strong>MPLS</strong></h2>
+					<h2>WHAT IS <strong>MPLS?</strong></h2>
 					<div class="sdHomeDescr">
 						<p>Multiprotocol Label Switching (MPLS) was designed to ensure reliable connections for real-time applications. Providing a unified data-carrying service for both circuit-based and packet-switching clients, it supports a range of technologies rather than being tied to any one in particular.</p>
 						<p>So how does it work? In a traditional IP network, each router performs an IP lookup to determine a next-hop based on its routing table. The router then forwards the packet to that next-hop and so on until it reaches the final destination.</p>
