meta descr changed

--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="black">
-<meta name="description" content="AEQUOS is a privately-owned forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
+<meta name="description" content="AEQUOS are leaders implementing the SD-WAN technology that enables companies of all sizes and across all sectors to exploit digital transformation. AEQUOS is a forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
 <title>AEQUOS - ABOUT US</title>
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
