--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="black">
-<meta name="description" content="The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for different-sized companies. AEQUOS provides different levels of services based on..." />
+<meta name="description" content="Right-size your network with SD-WAN. The UK's Leading Software-Defined Wide Area Network Provider who offers the right networking solutions for companies of all sizes." />
 <title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
