nav p changed to be inside li

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -102,11 +102,11 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
-					<li><a tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a abindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
-					<li><a tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" class="selected header-link" href="index.html">HOME</a><p class="nav_line">|</p></li>
+					<li><a tabindex="0" href="services.html" class="header-link">SERVICES</a><p class="nav_line">|</p></li>
+					<li><a abindex="0" href="sd-wan.html" class="header-link">SD-WAN</a><p class="nav_line">|</p></li>
+					<li><a tabindex="0" href="about_us.html" class="header-link">ABOUT US</a><p class="nav_line">|</p></li>
+					<li><a tabindex="0" href="news.html" class="header-link">NEWS</a><p class="nav_line">|</p></li>
 					<li><a tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
 			</nav> 
