--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="shortcut icon" 
 		type="image/x-icon" 
-		href="favicon.ico"> 
+		href="favicon.ico" sizes="16x16"> 
 <!--<link rel="shortcut icon" href="favicon.ico?v=<?php echo filemtime('favicon.ico') ?>" /> -->
 <script type="application/ld+json">
 	{
