--- a/about_us.html
+++ b/about_us.html
@@ -158,7 +158,7 @@ ga('send', 'pageview'); -->
 			<div class="sdHome aboutIntro">
 				<h2>INTRODUCING AEQUOS</h2>
 				<div class="sdHomeDescr networkDescr">
-					<p>Aequos is focused on one single, simple objective: Delivering the right-sized network, right now. From this, all else follows.</h3>
+					<p>Aequos is focused on one single, simple objective: Delivering the right-sized network, right now. From this, all else follows.</p>
 					<p>We are a dynamic, privately-owned and forward-thinking company, working closely with our customers to deliver innovation on a daily basis. </p>
 					<p>Committed and passionate about what we do, our innovative approach is constantly evolving in line with the ever-changing requirements of the modern business. Our business-first model meets the demands of complex application and end-user requirements, delivering agility, scalability and security. </p>
 					<p>We remain at the forefront of new technologies, deploying the latest advancements to accelerate the implementation and maximise the value of our networking services.</p>
@@ -249,9 +249,8 @@ ga('send', 'pageview'); -->
 											<a rel="noopener" href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
 									</div>
 			</div>
-			</main>
 		</section>
-
+	</main>
 		<footer>
 			<div class="footerCont">
 				<div class="footerAequos">
